deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-app
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: todo
        image: ajaydabe/myapp:v4
        ports:
        - containerPort: 8001
